@@ -25,6 +25,9 @@ via mahadev)
    ZOOKEEPER-206. documentation tab should contain the version number and 
    other small site changes. (pat via mahadev) 
 
+   ZOOKEEPER-226. fix exists calls that fail on server if node has null data.
+   (mahadev) 
+
 Release 3.0.0 - 2008-10-21
 
 Non-backward compatible changes:
